Samples/Vin.Sample.Web/Views/Error/NotYetConfigured.cshtml

@{
    ViewBag.Title = "Not Yet Configured";
    Layout = "";
}

<div class="row">
    <div class="twelve columns">
        <h1>Error</h1>
    </div>
</div>
<div class="row">
    <div class="twelve columns">
        The pages/post have yet to be configurued. If you are the admin please login and build your site.
    </div>
</div>